--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@splinetool/runtime": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-auto-scroll": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.553.0",
     "next": "15.0.2",
