--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.0",
